# ChangeBot

./: .dockerignore  Dockerfile  README.md  TEST_COVERAGE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.Jules/: palette.md
.github/: copilot-instructions.md
.github/workflows/: docker-image.yml  docker-publish.yml  test.yml
.jules/: bolt.md
migrations/: env.py
migrations/versions/: 6ddabe9ee105_remove_cbrf.py
src/: config.py
src/bot/: handlers.py  inline.py  keyboards.py  middlewares.py
src/database/: dal.py  engine.py  models.py
src/services/: charts.py  ocr.py  rates.py  recognizer.py
tests/: test_dal_cache.py  test_destructive_math.py  test_destructive_parsing.py  test_ocr.py  test_ocr_fast_autocontrast.py  test_ocr_optimization.py  test_rates.py  test_recognizer.py  test_recognizer_edge_cases.py  test_recognizer_optimization.py  test_recognizer_separators.py  test_recognizer_spaces.py
