[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.22.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.2",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.3",
    "curl-cffi==0.13.0",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "frozendict==2.4.7",
    "frozenlist==1.8.0",
    "greenlet==3.2.4",
    "idna==3.11",
    "kiwisolver==1.4.9",
    "magic-filter==1.0.12",
    "matplotlib==3.10.7",
    "multidict==6.7.0",
    "multitasking==0.0.12",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "propcache==0.4.1",
    "protobuf==6.33.1",
    "pycparser==2.23",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.12.0",
    "pyee==13.0.0",
    "pyparsing==3.2.5",
    "pytesseract>=0.3.13",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "six==1.17.0",
    "soupsieve==2.8",
    "sqlalchemy==2.0.44",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "yarl==1.22.0",
    "yfinance==0.2.66",
]

[dependency-groups]
dev = []
